--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -12,7 +12,7 @@
     --color-box-shadow: hsla(0, 0%, 0%, .3);
     --border-width: 1px;
     --dialog_box-shadow: 0 0 6px 0 var(--color-box-shadow);
-    --dialog_border-radius: .5rem;
+    --dialog_border-radius: .5em;
     --link_text-decoration: none;
     --transition-time: .25s;
 
@@ -34,7 +34,7 @@
         @include center-item;
         display: grid;
         width: 100%;
-        max-width: 40rem;
+        max-width: 40em;
         max-height: 90vh;
         background: var(--color-background);
         border-radius: var(--dialog_border-radius);
@@ -48,7 +48,7 @@
 
     &__content {
         @include border('top');
-        padding-top: 1.5rem;
+        padding-top: 1.5em;
     }
 
     &__title {
@@ -56,7 +56,7 @@
         flex-flow: row nowrap;
         align-items: center;
         justify-content: space-between;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1.5em;
 
         > h4 {
             font-size: medium;
@@ -78,15 +78,15 @@
     }
 
     &__body {
-        padding: 0 2rem;
+        padding: 0 2em;
     }
 
     &__header {
-        padding: 2rem;
+        padding: 2em;
 
         > h3 {
             margin-top: 0;
-            margin-bottom: 1rem;
+            margin-bottom: 1em;
         }
 
         > p {
@@ -99,8 +99,8 @@
         flex-flow: row nowrap;
         align-items: center;
         justify-content: flex-end;
-        padding: 1.5rem 2rem;
-        gap: .1rem;
+        padding: 1.5em 2em;
+        gap: .1em;
     }
 
     &__options {
@@ -127,10 +127,10 @@
             flex-flow: row nowrap;
             align-items: center;
             justify-content: space-between;
-            padding: 1rem;
+            padding: 1em;
             list-style: none;
             cursor: pointer;
-            gap: 1rem;
+            gap: 1em;
 
             &::marker {
                 display: none;
@@ -149,9 +149,9 @@
         flex-flow: row nowrap;
         align-items: center;
         justify-content: flex-start;
-        font-size: 0.875rem;
+        font-size: 0.875em;
         font-weight: 600;
-        gap: .8rem;
+        gap: .8em;
 
         &:before {
             content: var(--details-character);
@@ -182,11 +182,11 @@
         left: 0;
         display: var(--cookie-display);
         width: 100%;
-        padding: 1.5rem;
+        padding: 1.5em;
         background: var(---color-background);
         z-index: 9999;
         box-shadow: var(--dialog_box-shadow);
-        gap: 1rem;
+        gap: 1em;
         box-sizing: border-box;
 
         &--open {
@@ -207,7 +207,7 @@
             flex-flow: row nowrap;
             align-items: center;
             justify-content: flex-end;
-            gap: 1rem;
+            gap: 1em;
         }
     }
     //ToggleButton
