--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -7,6 +7,7 @@
     --color-text: hsl(90, 2%, 17%);
     --color-text--light: hsl(0, 0%, 44%);
     --color-border: hsl(0, 0%, 73%);
+    --color-hover: hsl(0, 0%, 92%);
     --color-overlay: hsla(0, 0%, 0%, .6);
     --color-success: hsl(79, 100%, 37%);
     --color-box-shadow: hsla(0, 0%, 0%, .3);
@@ -123,6 +124,7 @@
         }
 
         > summary {
+            background-color: var(--color-background);
             display: flex;
             flex-flow: row nowrap;
             align-items: center;
@@ -131,6 +133,15 @@
             list-style: none;
             cursor: pointer;
             gap: 1em;
+            transition: background-color var(--transition-time) ease-in-out;
+
+            @media screen and (max-width: 768px) {
+                transition: none;
+            }
+
+            &:hover {
+                --color-background: var(--color-hover)
+            }
 
             &::marker {
                 display: none;
@@ -157,7 +168,7 @@
             content: var(--details-character);
             font-size: 2em;
             color: var(--color-success);
-            transform: translateY(-3%);
+            transform: translateY(-2%);
         }
     }
 
